--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "marketapi",
+  "name": "market_api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "run": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^8.1.0",
-    "morgan": "^1.10.0"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2"
   }
 }
